css/main.css
/* ... */
.clearfix:after {
  clear: both;
}

/* ==========================================================================
     EXAMPLE Media Queries for Responsive Design.
     These examples override the primary ('mobile first') styles.
     Modify as content requires.
     ========================================================================== */

@media only screen and (min-width:768px) {
  /*Tablet styles here*/

  /* General styles */
  .content-wrapper {
    max-width: 640px;
    margin: 100px 0;
  }

  /* Header */
  header {
    justify-content: space-around;
    padding: 33px 0;
  }

  header .content-wrapper {
    width: 100%;
    justify-content: space-between;
  }

  header nav {
    width: 20%;
  }

  header nav ul {
    justify-content: space-between;
  }

  .header-divider {
    display: none;
  }

  header figure {
    width: 30%;
  }

  /* Hero Area */

  /* Aside */
  aside .content-wrapper {
    margin: 50px 0;
    display: flex;
    justify-content: space-between;
    flex-flow: row wrap;
  }

  aside .content-wrapper .form-description,
  aside .content-wrapper .form {
    width: 40%;
    margin: 0;
  }

  /* Features */
  .features article {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-flow: column wrap;
    flex-basis: 50%;
  }

  .features .features-item-description {
    width: 62%;
  }

  .features i {
    font-size: 3.75em;
    margin-bottom: 40px;
  }

  /* Reviews */
  .reviews article {
    display: flex;
    justify-content: space-between;
  }

  .reviews article div {
    width: 49%;
  }

  /* Footer */
  footer .content-wrapper {
    width: 65%;
    margin: 100px 0;
  }

  .footer-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  footer .contact {
    margin-bottom: 0;
  }

  footer .copyright {
    width: 100%;
  }

  /* ==========================================================================
     About Page
     ========================================================================== */

  .mission-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 20px;
  }

  .mission-content p {
    width: 45%;
  }

  .contact-section .content-wrapper h2 {
    width: 80%;
  }

  .contact-content {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
  }

  /* ==========================================================================
     FAQ Page
     ========================================================================== */

  header {
    padding: 15px 0;
  }

  .faq .content-wrapper {
    justify-content: space-between;
  }

  .faq-content {
    flex-basis: 45%;
  }

  .faq h2 {
    width: 100%;
  }
}

@media only screen and (min-width:1200px) {
  /*Desktop styles here*/

  .content-wrapper {
    max-width: 960px;
  }

  header figure {
    width: 20%;
  }

  /* Hero */
  .hero-area h1 {
    width: 60%;
  }

  /* Aside */
  aside .content-wrapper {
    justify-content: space-around;
  }

  aside .content-wrapper .form-description,
  aside .content-wrapper .form {
    width: 30%;
  }

  /* Features */

  .features h2 {
    width: 90%;
  }

  .features article {
    flex-basis: 33%;
  }

  /* Reviews */
  .reviews article div {
    width: 42%;
  }

  /* ==========================================================================
    About Page
    ========================================================================== */

  .mission h2,
  .contact-section .content-wrapper h2 {
    width: 95%;
  }

  /* ==========================================================================
    FAQ Page
    ========================================================================== */
  .faq h2 {
    width: 100%;
  }

}

/* ==========================================================================
     Print styles.
     Inlined to avoid the additional HTTP request:
     https://www.phpied.com/delay-loading-your-print-css/
     ========================================================================== */

@media print {

  *,
  *:before,
  *:after {
    background: transparent !important;
    color: #000 !important;
    /* Black prints faster */
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a,
  a:visited {
    text-decoration: underline;
  }

  a[href]:after {
    content: " (" attr(href) ")";
  }

  abbr[title]:after {
    content: " (" attr(title) ")";
  }

  /*
       * Don't show links that are fragment identifiers,
       * or use the `javascript:` pseudo protocol
       */
  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: "";
  }

  pre {
    white-space: pre-wrap !important;
  }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  /*
       * Printing Tables:
       * http://css-discuss.incutio.com/wiki/Printing_Tables
       */
  thead {
    display: table-header-group;
  }

  tr,
  img {
    page-break-inside: avoid;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3 {
    page-break-after: avoid;
  }
}

